overflow fixes

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -416,6 +416,7 @@ h1 {
 	color: $color;
 	&:hover, &:focus {
 		color: $color;
+		outline: none;
 	}
 }
 
@@ -471,6 +472,9 @@ h1 {
 .footer-link a {
 	color: $color;
 	text-decoration: none;
+	&:hover, &:focus {
+		outline: none;
+	}
 }
 
 
@@ -566,7 +570,7 @@ h1 {
 
 .menu-contacts {
 	margin-top: 1%;
-	margin-bottom: 3%;
+	margin-bottom: 1%;
 }
 
 .solo-wireless {
@@ -610,19 +614,32 @@ h1 {
 	.form-spacing {
 		margin-top: 50%;
 	}
+
+	.about-spacing {
+		margin-top: 2%;
+	}
 }
 
 @media (max-width: 991.98px) {
+	.container {
+		overflow: hidden;
+	}
+
 	.img-headphone-1 {
 		position: absolute;
-		left: 38%;
-		top: -470px;
+		left: 40%;
+		top: -456px;
+		max-width: 556px;
+		max-height: 551px;
+		z-index: -1;
 	}
 	
 	.img-headphone-2 {
 		position: absolute;
 		right: 75%;
-		top: -90px;
+		top: -75px;
+		// max-width: 309px;
+		// max-height: 376px;
 	}
 	
 	.img-headphone-3 {
@@ -630,6 +647,8 @@ h1 {
 		right: 45%;
 		bottom: 10%;
 		z-index: -1;
+		// max-width: 316px;
+		// max-height: 495px;
 	}
 
 	.product {
@@ -637,12 +656,12 @@ h1 {
 	}
 
 	.about-spacing {
-		margin-top: 12%;
+		margin-top: 3%;
 		margin-bottom: 1%;
 	}
 
 	.form-spacing {
-		margin-top: -9%;
+		margin-top: -11%;
 	}
 
 	.footer-spacing {
@@ -660,16 +679,10 @@ h1 {
 }
 
 @media (max-width: 767.98px) {
-	.about-us {
-		white-space: normal;
-		text-align: right;
-		font-size: 115px;
-	}
-
 	.img-headphone-1 {
 		position: absolute;
 		left: 40%;
-		top: -380px;
+		top: -395px;
 		z-index: -1;
 		max-width: 370.5px;
 		max-height: 367px;
@@ -677,8 +690,8 @@ h1 {
 	
 	.img-headphone-2 {
 		position: absolute;
-		right: 40%;
-		top: -250px;
+		right: 55%;
+		top: -240px;
 		z-index: -1;
 		max-width: 205.5px;
 		max-height: 250.5px;
@@ -686,11 +699,17 @@ h1 {
 	
 	.img-headphone-3 {
 		position: absolute;
-		right: 45%;
+		right: 50%;
 		bottom: 10%;
 		z-index: -1;
 		max-width: 210.5px;
 		max-height: 330px;
+	}
+
+	.about-us {
+		white-space: normal;
+		text-align: center;
+		font-size: 115px;
 	}
 
 	.product {
@@ -706,7 +725,7 @@ h1 {
 	}
 
 	#contact-us {
-		text-align: right;
+		text-align: center;
 	}
 
 	.form-spacing {
@@ -732,10 +751,14 @@ h1 {
 	}
 
 	.par-about-spacing {
-		margin-top: 6%;
+		margin-top: 8%;
 	}
 
 	.contact-us-spacing {
 		margin-top: 5%;
+	}
+
+	.brands-spacing {
+		margin-top: 4%;
 	}
 }
